fix: z-index botao carrinho de compras

--- a/front-end/src/Styles/CustomerProducts.css
+++ b/front-end/src/Styles/CustomerProducts.css
@@ -12,4 +12,5 @@
   position: fixed;
   top: 400px;
   width: 130px;
+  z-index: 10;
 }
